fix overflow in vivo v29e

--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ main{
 }
 
 @media (max-width: 400px) {
-    .titles {
+    .titles div {
         font-size: 0.85rem;
         padding: 0.5em;
     }
